--- a/EmailSenderInfo.env
+++ b/EmailSenderInfo.env
@@ -1,3 +1,3 @@
-SenderEmail=deleon1127r2d2@gmail.com
-Password=sfoeabosfpupbcna
-WeatherAPIKey="ce1f8b88d4a945beb81144914221504"
+SenderEmail=email@gmail.com
+Password=password you get from https://myaccount.google.com/security
+WeatherAPIKey="api key from https://www.weatherapi.com/"
